--- a/Carousel/Base.lproj/Main.storyboard
+++ b/Carousel/Base.lproj/Main.storyboard
@@ -71,7 +71,7 @@
         <!--Login View Controller-->
         <scene sceneID="JMY-TB-xoV">
             <objects>
-                <viewController id="ngd-Fv-gBP" customClass="LoginViewController" customModule="Carousel" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="loginVC" id="ngd-Fv-gBP" customClass="LoginViewController" customModule="Carousel" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CId-RO-O55">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="1136"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -127,11 +127,14 @@
                                                 <autoresizingMask key="autoresizingMask"/>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="PG2-AT-uTB">
-                                                <rect key="frame" x="21" y="13" width="280" height="50"/>
+                                                <rect key="frame" x="21" y="12" width="280" height="50"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <connections>
+                                                    <action selector="signInButtonAction:" destination="ngd-Fv-gBP" eventType="touchUpInside" id="7K4-wP-XFb"/>
+                                                </connections>
                                             </button>
-                                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" id="rMk-1B-uAe">
-                                                <rect key="frame" x="151" y="28" width="20" height="20"/>
+                                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="white" id="rMk-1B-uAe">
+                                                <rect key="frame" x="266" y="27" width="20" height="20"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             </activityIndicatorView>
                                         </subviews>
@@ -150,10 +153,15 @@
                     <navigationItem key="navigationItem" id="xnr-zD-kqx"/>
                     <value key="contentSizeForViewInPopover" type="size" width="320" height="568"/>
                     <connections>
+                        <outlet property="activityIndicator" destination="rMk-1B-uAe" id="ioQ-Ob-rpP"/>
                         <outlet property="backButton" destination="bLb-he-7Ec" id="ZMe-VY-HO3"/>
                         <outlet property="buttonParentView" destination="PFu-PL-htF" id="Da3-IG-Sr1"/>
+                        <outlet property="emailField" destination="XYb-oV-LWN" id="qqr-tL-y6J"/>
                         <outlet property="fieldParentView" destination="jQN-mV-Ycs" id="H1T-HS-9Yh"/>
+                        <outlet property="passwordField" destination="joy-HP-7KC" id="Q10-gP-mes"/>
                         <outlet property="scrollView" destination="dkf-A5-Vns" id="4qh-pE-1Kd"/>
+                        <outlet property="signInButton" destination="PG2-AT-uTB" id="V9c-At-0Io"/>
+                        <segue destination="xXT-yd-fg3" kind="modal" identifier="tutorialSegue" id="TeA-YA-xxL"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KS3-Rb-7ml" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -164,6 +172,61 @@
                 </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1108" y="352"/>
+        </scene>
+        <!--Tutorial View Controller-->
+        <scene sceneID="73K-S3-8uL">
+            <objects>
+                <viewController id="xXT-yd-fg3" customClass="TutorialViewController" customModule="Carousel" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9Hw-al-1PH">
+                        <rect key="frame" x="0.0" y="0.0" width="1280" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" id="zoo-em-R6e">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <subviews>
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="welcome1" id="aW4-cM-JPQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                    </imageView>
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="welcome2" id="sXk-lL-SDk">
+                                        <rect key="frame" x="320" y="0.0" width="320" height="568"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                    </imageView>
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="welcome3" id="cUw-8I-CoS">
+                                        <rect key="frame" x="640" y="0.0" width="320" height="568"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                    </imageView>
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="welcome4" id="fRC-iO-GJ9">
+                                        <rect key="frame" x="960" y="0.0" width="320" height="568"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                    </imageView>
+                                </subviews>
+                            </scrollView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" id="UUI-7G-3MF">
+                                <rect key="frame" x="141" y="520" width="39" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" red="0.11372549019607843" green="0.60392156862745094" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="pageIndicatorTintColor" red="0.89353116165094615" green="0.90933415333953105" blue="0.92957000372138376" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="currentPageIndicatorTintColor" red="0.1137254902" green="0.60392156860000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </pageControl>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="backup_button" id="6dN-eI-I74">
+                                <rect key="frame" x="0.0" y="415" width="320" height="97"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="1280" height="568"/>
+                    <connections>
+                        <outlet property="pageControl" destination="UUI-7G-3MF" id="1dR-LM-CXn"/>
+                        <outlet property="tutorialScrollView" destination="zoo-em-R6e" id="lAG-Ye-mEW"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s1S-VJ-5P2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1980" y="68"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="r7D-q5-vdw">
@@ -185,6 +248,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="backup_button" width="320" height="97"/>
         <image name="intro" width="320" height="1136"/>
         <image name="intro_tile1" width="153" height="152"/>
         <image name="intro_tile2" width="76" height="75"/>
@@ -196,5 +260,9 @@
         <image name="login_text" width="320" height="70"/>
         <image name="sign_in_buttons" width="320" height="104"/>
         <image name="sign_in_nav_bar" width="320" height="66"/>
+        <image name="welcome1" width="320" height="568"/>
+        <image name="welcome2" width="320" height="568"/>
+        <image name="welcome3" width="320" height="568"/>
+        <image name="welcome4" width="320" height="568"/>
     </resources>
 </document>
