Fade in button on tutorial screen when on last page

--- a/Carousel/Base.lproj/Main.storyboard
+++ b/Carousel/Base.lproj/Main.storyboard
@@ -217,6 +217,24 @@
                                     </imageView>
                                 </subviews>
                             </scrollView>
+                            <view contentMode="scaleToFill" id="sJ4-8A-Nez">
+                                <rect key="frame" x="0.0" y="434" width="320" height="126"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="5hW-JZ-eLc">
+                                        <rect key="frame" x="20" y="63" width="282" height="49"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <connections>
+                                            <segue destination="rFW-pq-CiM" kind="modal" id="Vyg-Xl-Td5"/>
+                                        </connections>
+                                    </button>
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="backup_button" id="6dN-eI-I74">
+                                        <rect key="frame" x="8" y="-6" width="320" height="97"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="4" id="UUI-7G-3MF">
                                 <rect key="frame" x="141" y="520" width="39" height="37"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -224,23 +242,13 @@
                                 <color key="pageIndicatorTintColor" red="0.89353116165094615" green="0.90933415333953105" blue="0.92957000372138376" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="currentPageIndicatorTintColor" red="0.1137254902" green="0.60392156860000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </pageControl>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="backup_button" id="6dN-eI-I74">
-                                <rect key="frame" x="0.0" y="415" width="320" height="97"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="5hW-JZ-eLc">
-                                <rect key="frame" x="20" y="458" width="279" height="48"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <connections>
-                                    <segue destination="rFW-pq-CiM" kind="modal" id="Vyg-Xl-Td5"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="1280" height="568"/>
                     <connections>
+                        <outlet property="buttonParentView" destination="sJ4-8A-Nez" id="e6i-Kr-b7r"/>
                         <outlet property="pageControl" destination="UUI-7G-3MF" id="1dR-LM-CXn"/>
                         <outlet property="tutorialScrollView" destination="zoo-em-R6e" id="lAG-Ye-mEW"/>
                     </connections>
